base/applications/clickhouse/clickhouse.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: clickhouse
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    # whitelist IPs:
    # nginx.ingress.kubernetes.io/whitelist-source-range: ""

spec:
  ingressClassName: nginx
  tls:
    - secretName: clickhouse-tls
      hosts:
        - clickhouse.local.com.br

  rules:
    - host: clickhouse.local.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: clickhouse-clickhouse-01
                port:
                  name: http
