base/applications/clickhouse/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: altinity
  namespace: clickhouse
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    # whitelist IPs:
    # nginx.ingress.kubernetes.io/whitelist-source-range: ""

spec:
  ingressClassName: nginx
  tls:
    - secretName: altinity-tls
      hosts:
        - altinity.local.com.br

  rules:
    - host: altinity.local.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: altinity-dashboard
                port:
                  number: 8080
